--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,12 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "VotingDashboard:build",
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "VotingDashboard:build:production"
