--- a/angular.json
+++ b/angular.json
@@ -102,7 +102,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-      "proxy.conf.json"            ],
+              "proxy.conf.json"     
+                  ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
